added default mem args for WebLogic CARGO-626